    (Closes: #473974)
  * licensecheck:
    + Document --no-conf.
    + Fix an uninitialised variable warning when --no-conf is used. Thanks.
      Cristian Greco. (Closes: #515047)
  * nmudiff:
    + Rework the arguments passed to mutt in order to avoid problems
      attaching the diff with recent versions of mutt.  Thanks, Adeodato
      Simó. (Closes: #518127)
  * rc-alert: Modify the description of the "I" flag to reference the
    squeeze-ignore tag rather than etch-ignore.

  [ James Vega ]
  * bts: Include the module name when calling MIME::Base64::encode_base64
    since MIME::Base64 is only being 'require'd not 'use'd.  Thanks Євгеній
    Мещеряков. (Closes: #516117)
  * debchange: Do not use an empty gecos field when trying to determine the
    maintainer's name. (Closes: 516423)

  [ Christoph Berg ]
  * dcontrol: New script to query binary and source package control files at
    http://qa.debian.org/cgi-bin/dcontrol.

 -- Christoph Berg <myon@debian.org>  Sat, 28 Feb 2009 22:59:55 +0100

devscripts (2.10.46) unstable; urgency=low

  * bts:
    + If the debbugs host in use is bugs(-*).d.o, use bugs-master.d.o when
      reporting spam to match recent changes to the BTS.
    + If -n / --no-action was given on the command line, print the URL that
      would have been used to report spam rather than sending the report.
    + Accept the new "squeeze" and "squeeze-ignore" tags.
  * debchange:
    + Add lenny-backports and lenny-volatile to the list of recognised
      distributions. (Closes: #514818)
    + Don't accept "sarge", "etch" or "lenny" as valid distributions. dak
      requires suite names (e.g. "stable") rather than codenames.
    + Modify --bpo to produce a changelog suitable for uploading to
      lenny-backports rather than etch-backports by default.  If the latest
      changelog entry is for an etch backport, a new etch-backports stanza
      will be produced instead.
  * licensecheck: