@@ -57,6 +57,16 @@ variables EMAIL and NAME will be used instead.  These can be overridden
 using the \fB\-\-from\fR option.  The program will not work in this case
 if an email address cannot be determined.
 .TP
+\fB\-\-delay\fR \fIDELAY\fR
+Indicate in the generated mail that the NMU has been uploaded to the
+DELAYED queue, with a delay of \fIDELAY\fR days.  The default value is
+\fIXX\fR which adds a placeholder to the e-mail.  A value of 0 indicates
+that the upload has not been delayed.  This can also be set using the 
+devscripts configuration files; see below.
+.TP
+\fB\-\-no\-delay\fR, \fB\-\-nodelay\fR
+Equivalent to \fB\-\-delay 0\fR.
+.TP
 \fB\-\-no\-conf\fR, \fB\-\-noconf\fR
 Do not read any configuration files.  This can only be used as the
 first option given on the command-line.
@@ -72,6 +82,12 @@ The two configuration files \fI/etc/devscripts.conf\fR and
 variables.  Command line options can be used to override configuration
 file settings.  Environment variable settings are ignored for this
 purpose.  The currently recognised variables are:
+.TP
+.B NMUDIFF_DELAY
+If this is set to a number, e-mails generated by \fBnmudiff\fR will by 
+default mention an upload to the DELAYED queue, delayed for the 
+specified number of days.  The value "0" indicates that the DELAYED 
+queue has not been used.
 .TP
 .B NMUDIFF_MUTT
 Can be "yes" (default) or "no", and specifies whether to use
